--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-*.class
+class
 ludum-dare-26/bin
 ludum-dare-26-android/bin
-ludum-dare-26-desktop/gen
+ludum-dare-26-android/gen
+ludum-dare-26-desktop/bin
+ludum-dare-26-desktop/assets
+.idea
+*.iml
