--- a/ludum-dare-26-html/.classpath
+++ b/ludum-dare-26-html/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" combineaccessrules="false" path="/ludum-dare-26"/>
-	<classpathentry kind="output" path="war/WEB-INF/classes"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ludum-dare-26"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/ludum-dare-26/libs/gdx.jar" sourcepath="/ludum-dare-26/libs/gdx-sources.jar"/>
@@ -13,4 +12,5 @@
 	<classpathentry kind="lib" path="/ludum-dare-26/libs/bodyeditor-loader-sources.jar"/>
 	<classpathentry kind="lib" path="/ludum-dare-26/libs/tween-engine-api.jar" sourcepath="/ludum-dare-26/libs/tween-engine-api-sources.jar"/>
 	<classpathentry kind="lib" path="/ludum-dare-26/libs/tween-engine-api-sources.jar"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
