--- a/ludum-dare-26-android/.classpath
+++ b/ludum-dare-26-android/.classpath
@@ -1,13 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="src" exported="true" path="/ludum-dare-26" combineaccessrules="false"/>
-	<classpathentry kind="output" path="bin/classes"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" exported="true" path="/ludum-dare-26/libs/gdx.jar" sourcepath="/ludum-dare-26/libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" exported="true" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
-	<classpathentry kind="lib" exported="true" path="/ludum-dare-26/libs/bodyeditor-loader.jar" sourcepath="/ludum-dare-26/libs/bodyeditor-loader-sources.jar"/>
-	<classpathentry kind="lib" exported="true" path="/ludum-dare-26/libs/tween-engine-api.jar" sourcepath="/ludum-dare-26/libs/tween-engine-api-sources.jar"/>
+    <classpathentry kind="src" path="src"/>
+    <classpathentry kind="src" path="gen"/>
+    <classpathentry combineaccessrules="false" exported="true" kind="src" path="/ludum-dare-26"/>
+    <classpathentry kind="output" path="bin/classes"/>
+    <classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+    <classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+    <classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
+    <classpathentry exported="true" kind="lib" path="/ludum-dare-26/libs/gdx.jar" sourcepath="/ludum-dare-26/libs/gdx-sources.jar"/>
 </classpath>
